@@ -13,36 +13,74 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
+/**
+ * Spring Security 6 Configuration
+ * - JWT-based authentication
+ * - Stateless session management
+ * - Public endpoints: /api/auth/**, /api/amadeus/**, /api/destinations/**, /api/flights/**, /api/hotels/**
+ * - Protected endpoints: /api/reservations/**, /api/admin/**
+ * - CORS enabled for http://localhost:4200
+ */
 @Configuration
-@EnableMethodSecurity
+@EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
 
     private final JwtAuthenticationEntryPoint unauthorizedHandler;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    public SecurityConfig(JwtAuthenticationEntryPoint unauthorizedHandler, JwtAuthenticationFilter jwtAuthenticationFilter) {
+    public SecurityConfig(JwtAuthenticationEntryPoint unauthorizedHandler, 
+                         JwtAuthenticationFilter jwtAuthenticationFilter) {
         this.unauthorizedHandler = unauthorizedHandler;
         this.jwtAuthenticationFilter = jwtAuthenticationFilter;
     }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http.csrf().disable()
-            .cors().and()
-                .exceptionHandling().authenticationEntryPoint(unauthorizedHandler).and()
-                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS).and()
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/**").permitAll()
-                        .anyRequest().authenticated()
-                );
-
-        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+        http
+            // Disable CSRF (stateless API with JWT)
+            .csrf(AbstractHttpConfigurer::disable)
+            
+            // Enable CORS with custom configuration
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            
+            // Configure exception handling
+            .exceptionHandling(exception -> exception
+                .authenticationEntryPoint(unauthorizedHandler))
+            
+            // Stateless session management (no session cookies)
+            .sessionManagement(session -> session
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            
+            // Authorization rules
+            .authorizeHttpRequests(auth -> auth
+                // Public endpoints - no authentication required
+                .requestMatchers("/api/auth/**").permitAll()
+                .requestMatchers("/api/amadeus/**").permitAll()
+                .requestMatchers("/api/destinations/**").permitAll()
+                .requestMatchers("/api/flights/**").permitAll()
+                .requestMatchers("/api/hotels/**").permitAll()
+                .requestMatchers("/api/health/**").permitAll()
+                
+                // Admin endpoints - ADMIN role required
+                .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                
+                // User endpoints - authentication required
+                .requestMatchers("/api/reservations/**").authenticated()
+                
+                // All other endpoints require authentication
+                .anyRequest().authenticated()
+            )
+            
+            // Add JWT filter before UsernamePasswordAuthenticationFilter
+            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -60,10 +98,25 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200", "*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        
+        // Allow Angular frontend
+        configuration.setAllowedOrigins(List.of("http://localhost:4200"));
+        
+        // Allow all standard HTTP methods
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        
+        // Allow all headers (including Authorization)
+        configuration.setAllowedHeaders(List.of("*"));
+        
+        // Allow credentials (cookies, authorization headers)
         configuration.setAllowCredentials(true);
+        
+        // Expose Authorization header to frontend
+        configuration.setExposedHeaders(List.of("Authorization"));
+        
+        // Cache preflight response for 1 hour
+        configuration.setMaxAge(3600L);
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
